Added base graphics plotting walk-through. This includes the source plotting.Rnw, and the plotting-script.R file. The second is generated from the first via knit purl, but then trimmed by hand.

--- a/basics/first_session.Rmd
+++ b/basics/first_session.Rmd
@@ -184,7 +184,7 @@ All of the variables you've created are temporarily stored in your workspace (te
 
 You can list all of the objects in your current environment with `ls()`:
 
-```{R, eval = FALSE}
+```{r, eval = FALSE}
 ls()
 ```
 
